<resources>
    <string name="app_name">GymTracker24</string>
    <string name="napaka_omrezje">Napaka pri uporabi omrežja.</string>
    <string name="rest_uporabnik_uspesno">Uspešno:</string>
    <string name="rest_nepricakovan_odgovor">Nepričakovan odgovor strežnika.</string>
    <string name="napaka_storitev">Napaka pri komunikaciji s strežnikom.</string>
    <!-- <string name="URL_base_storitve">http://10.0.2.2/gymvaja2/</string> -->
    <string name="URL_base_storitve">http://192.168.1.103/gymvaja2/</string>
    <string name="URL_rel_vpis_user">userji.php</string>
    <string name="URL_rel_vpis_vaja">exercises.php</string>
    <string name="URL_rel_vpis_weight">weight.php</string>
    <string name="home">Home</string>
    <string name="new_workout">New Workout</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="_0_0">0.0</string>
    <string name="_0">0</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="save">Save</string>
    <string name="workout_history">Workout History</string>
    <string name="your_workouts_will_be_shown_here">Your workouts will be shown here.</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="select_date">Select Date</string>
    <string name="delete">Delete</string>
    <string name="gymtracker24">GymTracker24</string>
    <string name="gym">Gym</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="birthday">Birthday</string>
    <string name="weight">Weight</string>
    <string name="log_out">Log out</string>
    <string name="exercise_progress_chart">Exercise Progress Chart</string>
    <string name="submit">Submit</string>
    <string name="body_weight_progress_chart">Body-weight Progress Chart</string>
</resources>