<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#89CFF0"
        android:padding="16dp">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="#FFFFFF"
            android:backgroundTint="#00008B"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/newWorkoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday"
            android:focusable="false"
            android:clickable="true"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/npWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:layout_marginTop="16dp"/>


        <Button
            android:id="@+id/btnSave"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="#007BFF"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:backgroundTint="#007BFF"
            android:textColor="#FFFFFF"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>
