<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89CFF0"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gymtracker24"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnGym"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/gym"
        android:backgroundTint="#007BFF"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnStatistics"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:backgroundTint="#007BFF"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:backgroundTint="#007BFF"
        android:textColor="#FFFFFF"/>

</LinearLayout>
